[package]
name = "color"
version = "0.0.1"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
keywords = ["color", "graphics", "rgb", "hsl", "gradient"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/color.git"
homepage = "https://github.com/pistondevelopers/color"

[dependencies]
num = "*"
rand = "*"
rustc-serialize = "*"
